# mops-tools

./: CMakeLists.txt  README.md  project.jml
avoidance_suscriber/: CMakeLists.txt  IcdFlightPlan.xml  IcdPlan.cpp  IcdPlan.h  avoidance_path.h  avoidance_path_2_xml.cpp  avoidance_path_2_xml.h  avoidance_subscriber.cpp  avoidance_subscriber.h  avoidance_suscriber.ini  main.cpp
bin2txt/: CMakeLists.txt  bin2txt.cpp
bin2udp/: CMakeLists.txt  bin2udp.cpp
docs/: Arquitectura-Interna-v2.0.pptx  README.docx  remixer.dia
mops2kml/: CMakeLists.txt  mops2klm.cpp
remixer/: CMakeLists.txt  config.h  intruderLoad.kml  ownshipLoad.kml  remixer.cpp  remixer.ini  setenv.bat  stageTest.bat  testall.bat  xPos.kml
remixerLib/: CMakeLists.txt  mailslot.h  mops2track.cpp  mops2track.h  mops2track_remixer.cpp  parseCsv.cpp  parseCsv.h
tests_data/aurora/final csvs/: A1_finalIntruder_20190116_121132.csv  A1_finalOwnship_20190115_124741.csv  A2_finalIntruder_20190116_114436.csv  A2_finalOwnship_20190115_162157.csv  A3_finalIntruder_20190116_150922.csv  A3_finalOwnship_20190116_150921.csv  A4_finalIntruder_20190220_142422.csv  A4_finalOwnship_20190220_142422.csv
tests_data/aurora/final kmls/: A1_finalIntruderT_20190111_134623.kml  A1_finalIntruder_20190111_134624.kml  A1_finalOwnshipT_20190111_134622.kml  A1_finalOwnship_20190111_134623.kml  A2_finalIntruderT_20190115_162201.kml  A2_finalIntruder_20190115_162202.kml  A2_finalOwnshipT_20190220_115305.kml  A2_finalOwnship_20190115_162202.kml  A3_finalIntruderT_20190116_150923.kml  A3_finalIntruderT_20190222_164954.kml  A3_finalIntruder_20190116_150924.kml  A3_finalIntruder_20190222_164954.kml  A3_finalOwnshipT_20190116_150922.kml  A3_finalOwnshipT_20190222_164954.kml  A3_finalOwnship_20190116_150923.kml  A3_finalOwnship_20190222_164954.kml  A4_finalIntruderT_20190116_155225.kml  A4_finalIntruder_20190116_155226.kml  A4_finalOwnshipT_20190116_155224.kml  A4_finalOwnship_20190116_155225.kml
tests_data/aurora/substages/: A1_finalIntruderT_20190218_102234.kml  A1_finalOwnshipT_20190218_102234.kml  A1_partialIntruderT_20190218_092719.kml  A1_partialIntruderT_20190218_092917.kml  A1_partialIntruderT_20190218_093117.kml  A1_partialIntruderT_20190218_093315.kml  A1_partialIntruderT_20190218_093518.kml  A1_partialIntruderT_20190218_093718.kml  A1_partialIntruderT_20190218_093919.kml  A1_partialIntruderT_20190218_094121.kml  A1_partialIntruderT_20190218_094319.kml  A1_partialIntruderT_20190218_094517.kml  A1_partialIntruderT_20190218_094716.kml  A1_partialIntruderT_20190218_095141.kml  A1_partialIntruderT_20190218_095339.kml  A1_partialIntruderT_20190218_095537.kml  A1_partialIntruderT_20190218_095736.kml  A1_partialIntruderT_20190218_100310.kml  A1_partialIntruderT_20190218_100510.kml  A1_partialIntruderT_20190218_100741.kml  A1_partialIntruderT_20190218_100939.kml  A1_partialIntruderT_20190218_101310.kml  A1_partialIntruderT_20190218_101513.kml  A1_partialIntruderT_20190218_101718.kml  A1_partialIntruderT_20190218_101919.kml  A1_partialIntruder_20190218_092719.csv  A1_partialIntruder_20190218_092917.csv  A1_partialIntruder_20190218_093117.csv  A1_partialIntruder_20190218_093315.csv  A1_partialIntruder_20190218_093518.csv  A1_partialIntruder_20190218_093718.csv  A1_partialIntruder_20190218_093919.csv  A1_partialIntruder_20190218_094121.csv  A1_partialIntruder_20190218_094319.csv  A1_partialIntruder_20190218_094517.csv  A1_partialIntruder_20190218_094716.csv  A1_partialIntruder_20190218_095141.csv  A1_partialIntruder_20190218_095339.csv  A1_partialIntruder_20190218_095537.csv  A1_partialIntruder_20190218_095736.csv  (+277 more)
tp_server/: CMakeLists.txt  additionalStuff.cpp  additionalStuff.h  alertProxy.cpp  alertProxy.h  avoidanceProxy.cpp  avoidanceProxy.h  mailslotServer.h  tpserver.ini  tpserverMain.cpp
trackLib/: CMakeLists.txt  trace.cpp  trace.h  trackDisplay.cpp  trackDisplay.h
trackLib/daa_iotools/: daa_file.cpp  daa_file.h
udpServer/: CMakeLists.txt  udpserver.cpp
ut_remixer/: CMakeLists.txt  unitTests.cpp
