#=================================================================================================================
# Welcome to trackLib
#=================================================================================================================
set(prjname trackLib)
#=================================================================================================================
# Headers
#=================================================================================================================
file (GLOB dir_27_headers daa_iotools/*.h daa_iotools/*.hpp)
SOURCE_GROUP("daa_iotools" FILES ${dir_27_headers})
file (GLOB dir_28_headers *.h *.hpp *.inl *.vert *.frag *.geom *.tes *.tcs)
SOURCE_GROUP("" FILES ${dir_28_headers})
set(all_headers ${dir_27_headers} ${dir_28_headers} )
#=================================================================================================================
# Sources
#=================================================================================================================
file (GLOB dir_29_sources daa_iotools/*.qrc daa_iotools/*.cpp daa_iotools/*.c daa_iotools/*.cxx)
SOURCE_GROUP("daa_iotools" FILES ${dir_29_sources})
file (GLOB dir_30_sources *.cpp *.c *.qrc *.vert *.frag)
SOURCE_GROUP("" FILES ${dir_30_sources})
set(all_sources ${dir_29_sources} ${dir_30_sources} )
#=================================================================================================================
# Helper
#=================================================================================================================
set(all_helpers )
#=================================================================================================================
# User's Definitions
#=================================================================================================================
#=================================================================================================================
# Target Properties
#=================================================================================================================
STRING(TOUPPER ${prjname} PRJNAME)
add_definitions(-D${PRJNAME}_STATIC) 

add_library(${prjname} STATIC ${all_headers} ${all_sources} ${all_helpers})
#=================================================================================================================
# Build Properties
#=================================================================================================================
set_target_properties(${prjname} PROPERTIES DEBUG_OUTPUT_NAME ${prjname}${DEBUG_TARGET_SUFFIX}${BUILD_ARCH_SUFFIX})
set_target_properties(${prjname} PROPERTIES RELEASE_OUTPUT_NAME ${prjname}${BUILD_ARCH_SUFFIX})
#=================================================================================================================
# Include - Current Project
#=================================================================================================================
include_directories(${PROJECTS_SRC_ROOT}/mops_tools)
#=================================================================================================================
# Includes - 1st Party Dependencies
#=================================================================================================================
include_directories(${PROJECTS_SRC_ROOT}/daa_icd)
#=================================================================================================================
# Libraries - 1st Party Dependencies
#=================================================================================================================
add_definitions(-DDAA_DATATYPES_ICD_STATIC) #static library
target_link_libraries(${prjname} debug daa_datatypes_icd${DEBUG_TARGET_SUFFIX}${BUILD_ARCH_SUFFIX} optimized daa_datatypes_icd)
#=================================================================================================================
# External Libraries - 3rd Party Dependencies
#=================================================================================================================
#=================================================================================================================
# Link Snippet for poco_net
#=================================================================================================================
FOREACH(A_LIB ${POCO_NET_LIBS_RELEASE}) 
  target_link_libraries(${prjname} optimized ${A_LIB})
ENDFOREACH()

FOREACH(A_LIB ${POCO_NET_LIBS_DEBUG}) 
  target_link_libraries(${prjname} debug ${A_LIB})
ENDFOREACH()

